# cpp_3sem

task3/: main.cpp
task3/include/: my_math.hpp
week1/task1/: CMakeLists.txt
week1/task3/: CMakeLists.txt
week1/task3/include/: ans_handler.hpp
week1/task3/src/: my_math.cpp
week2/task1/: main  main.cpp  my_image.ppm
week2/task2/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
week2/task3/: CMakeLists.txt  main.cpp
week2/task3/include/: utils.h  vec3.h
week2/task4/: CMakeLists.txt  main.cpp
week2/task4/include/: transformations.hpp  vec3.h
week2/task4/src/: transformations.cpp  utils.cpp
week3/lab1/: 1.cpp  2.cpp  3.2.cpp  3.cpp  a  plots.ipynb  second.csv  third.csv
week6/: array_and_pow.cpp
week6/grid/: CMakeLists.txt  gridlab.cpp  source.cpp
